# ShapeFitting

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
EKF_implementation/: parameter_setting.txt
circlefitting/: CMakeLists.txt  CircleFitByHyper.cpp  CircleFitByKasa.cpp  CircleFitByLeastSquare.cpp  CircleFitByTaubin.cpp  TestAlgebraicCircleFits.cpp  Test_vector_input.cpp  Utilities.cpp  a.out  data.h  mystuff.h
config/: params.yaml  stemground.rviz
g2o_result/: single_scan_102.g2o  single_scan_105.g2o  single_scan_108.g2o  single_scan_111.g2o  single_scan_114.g2o  single_scan_117.g2o  single_scan_12.g2o  single_scan_120.g2o  single_scan_123.g2o  single_scan_126.g2o  single_scan_129.g2o  single_scan_132.g2o  single_scan_135.g2o  single_scan_138.g2o  single_scan_141.g2o  single_scan_144.g2o  single_scan_147.g2o  single_scan_15.g2o  single_scan_150.g2o  single_scan_153.g2o  single_scan_156.g2o  single_scan_159.g2o  single_scan_162.g2o  single_scan_165.g2o  single_scan_168.g2o  single_scan_171.g2o  single_scan_174.g2o  single_scan_177.g2o  single_scan_18.g2o  single_scan_180.g2o  single_scan_183.g2o  single_scan_186.g2o  single_scan_189.g2o  single_scan_192.g2o  single_scan_195.g2o  single_scan_198.g2o  single_scan_201.g2o  single_scan_204.g2o  single_scan_207.g2o  single_scan_21.g2o  (+177 more)
g2o_result (backup)/: single_scan_100.g2o  single_scan_150.g2o  single_scan_200.g2o  single_scan_250.g2o  single_scan_300.g2o  single_scan_350.g2o
include/ESKF/: eskf.hpp  static_imu_init.h  utm_convert.cc
include/circle_fitting_integrate/: CMakeLists.txt  CircleFit_Integrate.hpp
include/common/: math_utils.h  utilities.h
include/icp/: bfnn.cc  bfnn.h  icp2d.cc  icp2d.h
include/patchworkpp/: patchworkpp.hpp
include/pose_graph/: PoseGraphBuilder.cpp  PoseGraphBuilder.hpp
include/utilities/: CircleClsuter.hpp  toUTM.hpp
launch/: CloudSegmentaion.launch  EuclideanCLustering.launch  EuclideanCLustering_copy).launch  demo.launch
project/: .gitignore  CMakeLists.txt  build.sh
project/include/: simple_math.h
project/src/: simple_math.cpp
project/test/: CMakeLists.txt  test_simple_math.cpp
rviz/: path_visualizer.rviz  stemground.rviz
scans/: plot_trees_colored.py  single_scan_0.txt  single_scan_1.txt  single_scan_10.txt  single_scan_100.txt  single_scan_101.txt  single_scan_102.txt  single_scan_103.txt  single_scan_104.txt  single_scan_105.txt  single_scan_106.txt  single_scan_107.txt  single_scan_108.txt  single_scan_109.txt  single_scan_11.txt  single_scan_110.txt  single_scan_111.txt  single_scan_112.txt  single_scan_113.txt  single_scan_114.txt  single_scan_115.txt  single_scan_116.txt  single_scan_117.txt  single_scan_118.txt  single_scan_119.txt  single_scan_12.txt  single_scan_120.txt  single_scan_121.txt  single_scan_122.txt  single_scan_123.txt  single_scan_124.txt  single_scan_125.txt  single_scan_126.txt  single_scan_127.txt  single_scan_128.txt  single_scan_129.txt  single_scan_13.txt  single_scan_130.txt  single_scan_131.txt  single_scan_132.txt  (+564 more)
scans/Fendt_/: plot_trees_colored.py  single_scan_0.txt  single_scan_100.txt  single_scan_101.txt  single_scan_103.txt  single_scan_104.txt  single_scan_105.txt  single_scan_106.txt  single_scan_107.txt  single_scan_11.txt  single_scan_112.txt  single_scan_113.txt  single_scan_116.txt  single_scan_117.txt  single_scan_118.txt  single_scan_119.txt  single_scan_12.txt  single_scan_122.txt  single_scan_124.txt  single_scan_125.txt  single_scan_128.txt  single_scan_129.txt  single_scan_130.txt  single_scan_131.txt  single_scan_132.txt  single_scan_138.txt  single_scan_140.txt  single_scan_142.txt  single_scan_143.txt  single_scan_144.txt  single_scan_145.txt  single_scan_146.txt  single_scan_148.txt  single_scan_149.txt  single_scan_15.txt  single_scan_150.txt  single_scan_153.txt  single_scan_154.txt  single_scan_156.txt  single_scan_158.txt  (+93 more)
scans/Fendt_before_bugfix/: plot_tree_r.py  plot_trees_colored.py  single_scan_1.txt  single_scan_10.txt  single_scan_102.txt  single_scan_108.txt  single_scan_109.txt  single_scan_110.txt  single_scan_111.txt  single_scan_114.txt  single_scan_115.txt  single_scan_120.txt  single_scan_121.txt  single_scan_123.txt  single_scan_126.txt  single_scan_127.txt  single_scan_13.txt  single_scan_133.txt  single_scan_134.txt  single_scan_135.txt  single_scan_136.txt  single_scan_137.txt  single_scan_139.txt  single_scan_14.txt  single_scan_141.txt  single_scan_147.txt  single_scan_151.txt  single_scan_152.txt  single_scan_155.txt  single_scan_157.txt  single_scan_159.txt  single_scan_16.txt  single_scan_160.txt  single_scan_161.txt  single_scan_163.txt  single_scan_165.txt  single_scan_166.txt  single_scan_168.txt  single_scan_171.txt  single_scan_172.txt  (+77 more)
scans/analysis/: fitness.txt  fitness_vec6d.txt  global_map.txt  reconstructed_global_map.txt  single_scan_250.g2o  state_cloud_2d.txt  translation_consective_poses.txt  view_trees.py
scans/gassel_before_bugfix/: single_scan_0.txt  single_scan_1.txt  single_scan_10.txt  single_scan_100.txt  single_scan_101.txt  single_scan_102.txt  single_scan_103.txt  single_scan_104.txt  single_scan_105.txt  single_scan_106.txt  single_scan_107.txt  single_scan_108.txt  single_scan_109.txt  single_scan_11.txt  single_scan_110.txt  single_scan_111.txt  single_scan_112.txt  single_scan_113.txt  single_scan_114.txt  single_scan_115.txt  single_scan_116.txt  single_scan_117.txt  single_scan_118.txt  single_scan_119.txt  single_scan_12.txt  single_scan_120.txt  single_scan_121.txt  single_scan_122.txt  single_scan_123.txt  single_scan_124.txt  single_scan_125.txt  single_scan_126.txt  single_scan_127.txt  single_scan_128.txt  (+669 more)
scripts/: Fendt_of_self_impl.bag  Fendt_of_self_impl.txt  output.txt  plot_ch3_gnss_2d.py  plot_ch3_gnss_3d.py  subscribe_and_save.py
src/: CloudSegmentaion.cpp  EuclideanClustering.cpp  GpsImuIntegral.cpp  ShapeFitting.cpp  demo.cpp  ekf.cpp  ekf_v2.cpp  ekf_v3.cpp  ekf_v3_new_io.cpp  ekf_v3_new_iov2.cpp  ekf_v4.cpp  ekf_v5.cpp  groundStemSeg.cpp  imuIntegal.cpp  imu_2d.cpp  new_GPS_IMU_EKF.cpp  patchworkpp.cpp
(+11 files in other folders)
